Wed Mar 24 2004  Joe Allen <jhallen@world.std.com>
	* lots of file:
	First steps at syntax highlighting!
	This version has support for C only (and the parser is a big hack),
	and only if all lines in the file are less than 1K.
	Turn it on with ^T H
	Todo: some more speed enhancements, a real parser to handle many
	file types, eliminate long line hack, update other windows during
	typing, eliminate some cycle saving hacks when highlighting is on.

Mon Mar 22 2004  Joe Allen <jhallen@world.std.com>
	* jmacsrc.in:
	Added ^X [ and ^X ].

Sat Mar 20 2004  Joe Allen <jhallen@world.std.com>
	* menu.c, menu.h, joerc.in, jstarrc.in, jmacsrc.in, rjoerc.in,
	jpicorc.in, cmd.c:
	File selection menu is now four lines instead of one line.  This
	needs a little more work: user should be able to set how many
	lines it should be in each context.

Sat Mar 20 2004  Joe Allen <jhallen@world.std.com>
	* usearch.c:
	After every search we reset window left offset to 0 and then make
	the minimal left-right scroll necessary to get entire found text
	completely on the screen.

Sat Mar 20 2004  Joe Allen <jhallen@world.std.com>
	* uerror.c:
	Slight improvement in compiler error parser.

Sat Mar 20 2004  Joe Allen <jhallen@world.std.com>
	Fix shell window again: instead of running bash if there is no
	SHELL variable defined, we just print a message.
	Also noticed that session leader stuff in Cygwin is broken: if you
	suspend joe the subshell breaks.

Sat Mar 20 2004  Joe Allen <jhallen@world.std.com>
	* tty.c, ushell.c:
	Fix shell window for Cygwin:
	The problem was that the SHELL environment variable is not defined.
	So now, if it's not defined we assume /usr/bin/bash.
	Also, we have to use /dev/ptmx for Cygwin.
	There is still a problem: have to refresh the screen after shell
	starts.

Fri Mar 19 2004  Joe Allen <jhallen@world.std.com>
	* tty.c:
	Fix shell window for SunOS 5.8

Thu Mar 18 2004  Joe Allen <jhallen@world.std.com>
	* usearch.c, regex.c, regex.h: